# game-web-site

./: db.drawio  pyproject.toml
GameWeb/: manage.py
GameWeb/GameWeb/: asgi.py  settings.py  urls.py  wsgi.py
GameWeb/main/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
GameWeb/main/management/commands/: addgames.py  searchgame.py
GameWeb/main/migrations/: 0001_initial.py  0002_auto_20210202_2302.py  0003_mustgames.py  0004_auto_20210210_2139.py
GameWeb/main/static/main/css/: main.css
GameWeb/main/templates/main/: base.html  detail_game.html  games.html  login.html  must_games.html  profile.html  registration.html
GameWeb/main/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register.html
